# madNES

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  build.zig  build.zig.zon  fips.yml
.github/workflows/: build.yml
common/: CMakeLists.txt  common.h  gfx.c  shaders.glsl  sokol.c  ui.cc  ui.h  webapi.h
src/: CMakeLists.txt  nes-ui-impl.cc  nes.c  nes.h  ui_nes.h
